# nfdeterminize

./: .gitignore  Cargo.toml  README.md  clean-tmp-nfas.sh  clean_data.sh  generate-bns.g  generate-seqstack.g  generate-test-nfa.sh  generate4-4.g  get-flamegraphs-bns.sh
automatons/: complex_bns.nfa  new_dfa.automaton  random_nfa.automaton  ts-3-6.dfa
benches/: automaton_benches.rs
src/: automaton.pest  automaton.rs  automaton_encoder.rs  automaton_multithreaded.rs  automaton_sequential.rs  automaton_test.rs  lib.rs  main.rs  tpn.rs  transition_graphs.rs  trie.rs  ubig.rs
