[package]
name = "nfdeterminize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
criterion = "0.4.0"
fasthash = "0.4.0"
pest = "2.5.3"
pest_derive = "2.5.3"

[profile.release]
debug = true

[[bench]]
name = "automaton_benches"
harness = false
