[package]
name = "nfdeterminize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
criterion = "0.4.0"
fasthash = "0.4.0"
lz4_flex = "0.10.0"
pest = "2.5.3"
pest_derive = "2.5.3"
serial_test = "1.0.0"
uuid = { version = "1.3.0", features = ["fast-rng", "v4"] }

[profile.release]
debug = true

[[bench]]
name = "automaton_benches"
harness = false
